kyy-k8s-config/dev/app/frontend/fe-tiku-wap/fe-tiku-wap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:

  labels:
    app: fe-tiku-wap
  name: fe-tiku-wap
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "zckjpx.kuaixuezaixian.com,caishidian.kuaixuezaixian.com"
spec:
  rules:
    - host: "www.kuaixuezaixian.com"
      http:
        paths:
          - backend:
              serviceName: fe-tiku-wap
              servicePort: 80
            path: /tiku/wap/
